commit by pooja

--- a/about.html
+++ b/about.html
@@ -127,40 +127,40 @@
                                                     <div class="row gy-3">
                                                         <div class="col-md-4 col-sm-4 col-12">
                                                             <div class="productsImg">
-                                                                <img src="assets/img/category/category1.png" class="w-100 h-100" alt="img">
+                                                                <img src="assets/img/product1.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
                                                                 <div class="productText p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
-                                                                    <img src="assets/img/svg/Cart.svg" class="w-100 h-100" alt="img">
+                                                                    <img src="assets/img/prodcutIcon1.png" class="w-100 h-100" alt="img">
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-4 col-sm-4 col-12">
                                                             <div class="productsImg">
-                                                                <img src="assets/img/category/category1.png" class="w-100 h-100" alt="img">
+                                                                <img src="assets/img/product2.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
                                                                 <div class="productText p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
-                                                                    <img src="assets/img/svg/Cart.svg" class="w-100 h-100" alt="img">
+                                                                    <img src="assets/img/productIcon2.png" class="w-100 h-100" alt="img">
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-4 col-sm-4 col-12">
                                                             <div class="productsImg">
-                                                                <img src="assets/img/category/category1.png" class="w-100 h-100" alt="img">
+                                                                <img src="assets/img/product3.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
                                                                 <div class="productText p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
-                                                                    <img src="assets/img/svg/Cart.svg" class="w-100 h-100" alt="img">
+                                                                    <img src="assets/img/productIcon3.png" class="w-100 h-100" alt="img">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -185,7 +185,7 @@
                                         <div class="row gy-3">
                                             <div class="col-md-12">
                                                 <div class="giveAwayImg">
-                                                    <img src="assets/img/hero-banner/background.jpg" class="w-100 h-100" alt="img">
+                                                    <img src="assets/img/giveaway.png" class="w-100 h-100" alt="img">
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
@@ -226,7 +226,7 @@
                                             </div>
                                             <div class="col-md-12 pt-2">
                                                 <div class="aboutUsImg">
-                                                    <img src="assets/img/category/category1.png" class="w-100 h-100" alt="">
+                                                    <img src="assets/img/about.png" class="w-100 h-100" alt="">
                                                 </div>
                                             </div>
                                         </div>
