--- a/preetam.html
+++ b/preetam.html
@@ -63,7 +63,7 @@
         <meta property="og:image:height" content="512">
 
         <!--  Title -->
-        <title>topp Page | websiteNameWillBeHere Website</title>
+        <title>HOME PAGE | DAMBLE</title>
         <!-- Required meta tags -->
         <meta name="title" content="Home Page | websiteNameWillBeHere Website" />
         <meta name="description" content="This websiteNameWillBeHere website" />
@@ -132,8 +132,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 pe-0 order-1 order-lg-2 text-center">
-                                <!-- <video src="./assets/video/lehlah.mp4" autoplay loop muted class="w-100"></video> -->
-                                <img src="./assets/img/video.png" class="w-50" alt="video img">
+                                <video src="./assets/video/heroVideo.mp4" autoplay loop muted class="w-100"></video>
+                                <!-- <img src="./assets/img/video.png" class="w-50" alt="video img"> -->
                             </div>
                             <div class="col-12 text-center mt-4 order-3">
                                 <div class="row">
