commit by pooja

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 
         <script src="assets/libs/node_modules/jquery/dist/jquery.min.js"></script>
     </head>
-    <body class="bgBlack">
+    <body>
         <main class="container-fluid">
             <div class="row mainInner">
                 <div class="col-12 px-0 flex-fill" data-page-name="homeSection">
@@ -130,7 +130,7 @@
                                                                 <img src="assets/img/product1.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -143,7 +143,7 @@
                                                                 <img src="assets/img/product2.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -156,7 +156,7 @@
                                                                 <img src="assets/img/product3.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -177,7 +177,7 @@
 
 
                     <!------------Start giveAway Section-------------->
-                    <div class="container-fluid px-0">
+                    <div class="container-fluid px-0 my-3 d-flex">
                         <div class="p-0 giveAwaySection">
                             <div class="row gy-3 mx-0">
                                 <div class="col-12 px-0">
@@ -213,20 +213,26 @@
                                                     About Us
                                                 </div>
                                             </div>
-                                            <div class="col-md-12">
-                                                <div class="aboutUsMainHeading text-center">
-                                                    What is Damble ?
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12 pt-2">
-                                                <div class="aboutUspara text-center">
-                                                    Damble is  a revolution in the online gambling industry. It is online’s greatest Casino & Sports Betting platform. <br>
-                                                    We offer a wide range of casino games and sports betting options that cater to the diverse needs of our users.
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12 pt-2">
-                                                <div class="aboutUsImg">
-                                                    <img src="assets/img/about.png" class="w-100 h-100" alt="">
+                                            <div class="col-12">
+                                                <div class="container">
+                                                    <div class="row gy-3">
+                                                        <div class="col-md-12">
+                                                            <div class="aboutUsMainHeading text-center">
+                                                                What is Damble ?
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-12 pt-2">
+                                                            <div class="aboutUspara text-center">
+                                                                Damble is  a revolution in the online gambling industry. It is online’s greatest Casino & Sports Betting platform. 
+                                                                We offer a wide range of casino games and sports betting options that cater to the diverse needs of our users.
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-12 pt-3">
+                                                            <div class="aboutUsImg">
+                                                                <img src="assets/img/about.png" class="w-100 h-100" alt="">
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
