--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                                                 <img src="assets/img/product1.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText prodcutBg1 p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -186,7 +186,7 @@
                                                                 <img src="assets/img/product2.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText prodcutBg2 p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -199,7 +199,7 @@
                                                                 <img src="assets/img/product3.png" class="w-100 h-100" alt="img">
                                                             </div>
                                                             <div class="mt-3">
-                                                                <div class="productText p-3">
+                                                                <div class="productText prodcutBg3 p-3">
                                                                     Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
                                                                 </div>
                                                                 <div class="productIcon">
@@ -220,7 +220,7 @@
 
 
                     <!------------Start giveAway Section-------------->
-                    <div class="container-fluid px-0">
+                    <div class="container-fluid px-0 my-3 d-flex">
                         <div class="p-0 giveAwaySection">
                             <div class="row gy-3 mx-0">
                                 <div class="col-12 px-0">
@@ -229,6 +229,7 @@
                                             <div class="col-md-12">
                                                 <div class="giveAwayImg">
                                                     <img src="assets/img/giveaway.png" class="w-100 h-100" alt="img">
+                                                    <!-- <video src="" autoplay loop muted class="w-100"></video> -->
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
@@ -270,6 +271,7 @@
                                             <div class="col-md-12 pt-2">
                                                 <div class="aboutUsImg">
                                                     <img src="assets/img/about.png" class="w-100 h-100" alt="">
+                                                    <!-- <video src="" autoplay loop muted class="w-100"></video> -->
                                                 </div>
                                             </div>
                                         </div>
