--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                                         <div class="col-md-4 col-sm-4 col-12">
                                                             <div class="productCard d-flex flex-column h-100">
                                                                 <div class="productsImg">
-                                                                    <img src="assets/img/product2.png" class="w-100 h-100 tiltImg" alt="img">
+                                                                    <img src="assets/img/products2.png" class="w-100 h-100 tiltImg" alt="img">
                                                                 </div>
                                                                 <div class="mt-3">
                                                                     <div class="productText prodcutBg2 p-3">
