--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-6 ps-0 order-2 order-lg-1">
                                 <div class="row mx-0">
-                                    <div class="col-12 logo"><img src="./assets/img/logo.png" alt="logo"></div>
+                                    <div class="col-12 logo">
+                                        <!-- <video src="assets/video/Damble-Logo-animation-4K.mp4" autoplay loop muted class="w-100"></video> -->
+                                        <img src="assets/img/logo.png" alt="">
+                                    </div>
                                     <div class="col-12 heading">Get ready to <br> change the <span>Game !</span></div>
                                     <div class="col-12 subHeading">Online's greatest betting platform</div>
                                 </div>
@@ -168,10 +171,58 @@
                                             <div class="col-md-12">
                                                 <div class="productItem">
                                                     <div class="row gy-3">
-                                                        <div class="col-md-4 col-sm-4 col-12">
+                                                        <div class="col-sm-4 col-12 d-none d-sm-block">
+                                                            <div class="productsImg">
+                                                                <img src="./assets/img/product1.png" class="w-100" alt="img">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 col-12 d-none d-sm-block">
+                                                            <div class="productsImg">
+                                                                <img src="./assets/img/product2.png" class="w-100" alt="img">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 col-12 d-none d-sm-block">
+                                                            <div class="productsImg">
+                                                                <img src="./assets/img/product3.png" class="w-100" alt="img">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 col-12 d-none d-sm-block">
+                                                            <div class="productText prodcutBg1 p-3">
+                                                                Bet on your favorite sports events, or simply enjoy more than <span>10,000</span> games from BlackJack, Poker, Roulette and Slots.          
+                                                            </div>
+                                                            <div class="productIcon">
+                                                                <img src="assets/img/productIcon1.svg" class="w-100 h-100" alt="img">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 col-1 d-none d-sm-block">
+                                                            <div class="productText prodcutBg2 p-3">
+                                                                Damble’s aim is to provide users
+                                                                with the best gaming 
+                                                                experience a player-centric
+                                                                approach, and to satisfy millions
+                                                                of bettors across the globe.          
+                                                            </div>
+                                                            <div class="productIcon">
+                                                                <img src="assets/img/productIcon2.svg" class="w-100 h-100" alt="img">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 col-12 d-none d-sm-block">
+                                                            <div class="productText prodcutBg3 p-3">
+                                                                Damble has its priority set 
+                                                                on its community, 
+                                                                ensuring an everlasting
+                                                                and endlessly entertaining 
+                                                                gambling experience          
+                                                            </div>
+                                                            <div class="productIcon">
+                                                                <img src="assets/img/productIcon3.svg" class="w-100 h-100" alt="img">
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-md-4 col-sm-4 col-12 d-sm-none">
                                                             <div class="productCard d-flex flex-column h-100">
                                                                 <div class="productsImg">
-                                                                    <img src="./assets/img/product1.png" class="w-100 h-100" alt="img">
+                                                                    <img src="./assets/img/product1.png" class="w-100" alt="img">
                                                                 </div>
                                                                 <div class="mt-3">
                                                                     <div class="productText prodcutBg1 p-3">
@@ -183,10 +234,10 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-md-4 col-sm-4 col-12">
+                                                        <div class="col-md-4 col-sm-4 col-12 d-sm-none">
                                                             <div class="productCard d-flex flex-column h-100">
                                                                 <div class="productsImg">
-                                                                    <img src="assets/img/products2.png" class="w-100 h-100 tiltImg" alt="img">
+                                                                    <img src="assets/img/product2.png" class="w-100 tiltImg" alt="img">
                                                                 </div>
                                                                 <div class="mt-3">
                                                                     <div class="productText prodcutBg2 p-3">
@@ -202,10 +253,10 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-md-4 col-sm-4 col-12">
+                                                        <div class="col-md-4 col-sm-4 col-12 d-sm-none">
                                                             <div class="productCard d-flex flex-column h-100">
                                                                 <div class="productsImg">
-                                                                    <img src="assets/img/product3.png" class="w-100 h-100" alt="img">
+                                                                    <img src="assets/img/product3.png" class="w-100" alt="img">
                                                                 </div>
                                                                 <div class="mt-3">
                                                                     <div class="productText prodcutBg3 p-3">
@@ -242,7 +293,8 @@
                                         <div class="row gy-3">
                                             <div class="col-md-12">
                                                 <div class="giveAwayImg">
-                                                    <img src="assets/img/giveaway.png" class="w-100 h-100" alt="img">
+                                                    <video src="assets/video/GIveaway.mp4" class="w-100" autoplay loop muted></video>
+                                                    <!-- <img src="assets/img/giveaway.png" class="w-100 h-100" alt="img"> -->
                                                     <!-- <video src="" autoplay loop muted class="w-100"></video> -->
                                                 </div>
                                             </div>
