--- a/index.html
+++ b/index.html
@@ -283,9 +283,22 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-12 pt-2">
-                                                <div class="aboutUsImg">
-                                                    <img src="assets/img/about.png" class="w-100 h-100" alt="">
-                                                    <!-- <video src="" autoplay loop muted class="w-100"></video> -->
+                                                <div class="row mx-0">
+                                                    <div class="col-sm-4">
+                                                        <div class="">
+                                                            <video src="./assets/video/why.mp4" autoplay loop muted class="w-100"></video>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <div class="">
+                                                            <video src="./assets/video/whyMain.mp4" autoplay loop muted class="w-100"></video>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <div class="">
+                                                            <video src="./assets/video/why.mp4" autoplay loop muted class="w-100"></video>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
