--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
                                                 <div class="row mx-0">
                                                     <div class="col-sm-4">
                                                         <div class="">
-                                                            <video src="./assets/video/why.mp4" autoplay loop muted class="w-100"></video>
+                                                            <img src="./assets/video/whyVid.png" class="w-100" alt="">
+                                                            <!-- <video src="./assets/video/why.mp4" autoplay loop muted class="w-100"></video> -->
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-4">
